@@ -13,8 +13,9 @@ namespace scene
 //! constructor
 CSceneNodeAnimatorFollowSpline::CSceneNodeAnimatorFollowSpline(u32 time,
 	const core::array<core::vector3df>& points, f32 speed,
-	f32 tightness)
-: Points(points), Speed(speed), Tightness(tightness), StartTime(time)
+	f32 tightness, bool loop, bool pingpong)
+: ISceneNodeAnimatorFinishing(0), Points(points), Speed(speed), Tightness(tightness), StartTime(time)
+, Loop(loop), PingPong(pingpong)
 {
 	#ifdef _DEBUG
 	setDebugName("CSceneNodeAnimatorFollowSpline");
@@ -36,18 +37,37 @@ void CSceneNodeAnimatorFollowSpline::animateNode(ISceneNode* node, u32 timeMs)
 
 	const u32 pSize = Points.size();
 	if (pSize==0)
+	{
+		if ( !Loop )
+			HasFinished = true;
 		return;
+	}
 	if (pSize==1)
 	{
-		node->setPosition(Points[0]);
+		if ( timeMs > StartTime )
+		{
+			node->setPosition(Points[0]);
+			if ( !Loop )
+				HasFinished = true;
+		}
 		return;
 	}
 
 	const f32 dt = ( (timeMs-StartTime) * Speed * 0.001f );
-	const f32 u = core::fract ( dt );
-	const s32 idx = core::floor32( dt ) % pSize;
+	const s32 unwrappedIdx = core::floor32( dt );
+	if ( !Loop && unwrappedIdx >= (s32)pSize-1 )
+	{
+		node->setPosition(Points[pSize-1]);
+		HasFinished = true;
+		return;
+	}
+	const bool pong = PingPong && (unwrappedIdx/(pSize-1))%2;
+	const f32 u =  pong ? 1.f-core::fract ( dt ) : core::fract ( dt );
+	const s32 idx = pong ?	(pSize-2) - (unwrappedIdx % (pSize-1))
+						: (PingPong ? unwrappedIdx % (pSize-1)
+									: unwrappedIdx % pSize);
 	//const f32 u = 0.001f * fmodf( dt, 1000.0f );
-	
+
 	const core::vector3df& p0 = Points[ clamp( idx - 1, pSize ) ];
 	const core::vector3df& p1 = Points[ clamp( idx + 0, pSize ) ]; // starting point
 	const core::vector3df& p2 = Points[ clamp( idx + 1, pSize ) ]; // end point
@@ -73,6 +93,8 @@ void CSceneNodeAnimatorFollowSpline::serializeAttributes(io::IAttributes* out, i
 {
 	out->addFloat("Speed", Speed);
 	out->addFloat("Tightness", Tightness);
+	out->addBool("Loop", Loop);
+	out->addBool("PingPong", PingPong);
 
 	u32 count = Points.size();
 
@@ -98,6 +120,8 @@ void CSceneNodeAnimatorFollowSpline::deserializeAttributes(io::IAttributes* in, 
 {
 	Speed = in->getAttributeAsFloat("Speed");
 	Tightness = in->getAttributeAsFloat("Tightness");
+	Loop = in->getAttributeAsBool("Loop");
+	PingPong = in->getAttributeAsBool("PingPong");
 	Points.clear();
 
 	for(u32 i=1; true; ++i)
@@ -125,7 +149,7 @@ void CSceneNodeAnimatorFollowSpline::deserializeAttributes(io::IAttributes* in, 
 
 ISceneNodeAnimator* CSceneNodeAnimatorFollowSpline::createClone(ISceneNode* node, ISceneManager* newManager)
 {
-	CSceneNodeAnimatorFollowSpline * newAnimator = 
+	CSceneNodeAnimatorFollowSpline * newAnimator =
 		new CSceneNodeAnimatorFollowSpline(StartTime, Points, Speed, Tightness);
 
 	return newAnimator;
