@@ -7,21 +7,22 @@
 
 #include "ISceneNode.h"
 #include "irrArray.h"
+#include "ISceneNodeAnimatorFinishing.h"
 
 namespace irr
 {
 namespace scene
 {
-	//! Scene node animator based free code Matthias Gall wrote and sent in. (Most of 
+	//! Scene node animator based free code Matthias Gall wrote and sent in. (Most of
 	//! this code is written by him, I only modified bits.)
-	class CSceneNodeAnimatorFollowSpline : public ISceneNodeAnimator
+	class CSceneNodeAnimatorFollowSpline : public ISceneNodeAnimatorFinishing
 	{
 	public:
-	
+
 		//! constructor
-		CSceneNodeAnimatorFollowSpline(u32 startTime, 
+		CSceneNodeAnimatorFollowSpline(u32 startTime,
 			const core::array< core::vector3df >& points,
-			f32 speed = 1.0f, f32 tightness = 0.5f);
+			f32 speed = 1.0f, f32 tightness = 0.5f, bool loop=true, bool pingpong=false);
 
 		//! animates a scene node
 		virtual void animateNode(ISceneNode* node, u32 timeMs);
@@ -34,7 +35,7 @@ namespace scene
 
 		//! Returns type of the scene node animator
 		virtual ESCENE_NODE_ANIMATOR_TYPE getType() const { return ESNAT_FOLLOW_SPLINE; }
-		
+
 		//! Creates a clone of this animator.
 		/** Please note that you will have to drop
 		(IReferenceCounted::drop()) the returned pointer after calling
@@ -50,6 +51,8 @@ namespace scene
 		f32 Speed;
 		f32 Tightness;
 		u32 StartTime;
+		bool Loop;
+		bool PingPong;
 	};
 
 
